--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -57,7 +57,7 @@ h6 {
   margin: 0 auto;
 }
 .bg-light-gray {
-  background-color: #eeeeee;
+  background-color: #c2eafe;
 }
 .bg-darkest-gray {
   background-color: #222222;
@@ -245,23 +245,21 @@ header {
   color: white;
 }
 header .intro-text {
-  padding-top: 70px;
-  padding-bottom: 50px;
+  padding-top: 90px;
+  padding-bottom: 10px;
 }
 header .intro-text .intro-lead-in {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
+  font-weight: 300;
+  color: white;
+  font-size: 16px;
+  margin-bottom: 50px;
 }
 header .intro-text .intro-heading {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
   font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
-  margin-bottom: 25px;
+  text-transform: uppercase;
+  margin-top: 50px;
+  margin-bottom: 0;
+  font-size: 30px;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -286,11 +284,18 @@ header .intro-text .intro-heading {
 }
 section {
   padding: 100px 0;
+  background-color: #f5feff;
 }
 section h2.section-heading {
   font-size: 40px;
   margin-top: 0;
   margin-bottom: 15px;
+}
+
+hr {
+  border-color: white;
+  border-width: 3px;
+  max-width: 50px;
 }
 section h3.section-subheading {
   font-size: 16px;
