--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <h3>CS Student at UC Berkeley</h3>
 
       <a href="/about">About</a> ·
-      <a href="https://tinyurl.com/ybz5y9gn">Resume</a> ·
+      <a href="/resume">Resume</a> ·
    </div>
 
 </html>
